# chicode.org

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  webpack-stats.json  webpack.config.js
assets/webpack_bundles/: main-84a807a18968da521135.js
chicode/: settings.py  urls.py  wsgi.py
chicode/templates/: base.html  home.html
chicode/users/: models.py
scripts/: load-initial.sh  makemigrations.sh  migrate.sh  run-django-script.sh
