[tool.poetry]
name = "chicode.org"
version = "0.1.0"
description = ""
authors = ["Anton <antonoutkine@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.1"
django = "^2.1"
psycopg2 = "^2.7"
Jinja2 = "^2.10"
django-compressor = "^2.2"
django-libsass = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint-django = "^2.0"
pylint = "^2.1"
yapf = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
